--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,9 @@
     <string name="telefono">Teléfono:</string>
     <string name="responsable">Responsable:</string>
     <string name="direccion">Dirección:</string>
+    <string name="ordenarAyuntamientos">Ordenar por:</string>
+    <string name="nuevo">Nuevo</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
