--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,8 +31,11 @@
 
     <string name="aceptar">Aceptar</string>
     <string name="cancelar">Cancelar</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="eliminar">Eliminar</string>
+    <string name="mensajeConfirmacionBorrado">"¿Estás seguro/a de que quieres eliminar: "</string>
+    <string name="si">Sí</string>
+    <string name="no">No</string>
 
 
 </resources>
