--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,5 +53,7 @@
     <string name="longitud">Longitud:</string>
     <string name="latitudPlaceholder">37.401893</string>
     <string name="longitudPlaceholder">-5.950948</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
