--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,7 +53,12 @@
     <string name="longitud">Longitud:</string>
     <string name="latitudPlaceholder">37.401893</string>
     <string name="longitudPlaceholder">-5.950948</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="veterinario">Nombre:</string>
+    <string name="especialidad">Especialidad:</string>
+    <string name="apellidos">Apellidos:</string>
+    <string name="nombrePlaceholder">José Antonio</string>
+    <string name="apellidosPlaceholder">Muñoz Rodríguez</string>
+    <string name="especialidadPlaceholder">Traumatología</string>
 
 </resources>
